[package]
name = "cnctd_bump"
version = "0.1.7"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "CLI to bump versions for Rust and NPM projects"
license = "MIT"
repository = "https://github.com/Connected-Dot/cnctd_bump"

[lib]
name = "cnctd_bump"
path = "src/lib.rs"

[[bin]]
name = "cnctd-bump"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive"] }
cnctd_cargo = { version = "0.1.2", path = "../../../modules/rust/cnctd_cargo" }
cnctd_npm = { version = "0.1.0", path = "../../../modules/rust/cnctd_npm" }
tokio = { version = "1.32.0", features = ["full"] }
